create the box to see where the images will be, next step is to place it to be ready for add some js

--- a/pages/giftopening.html
+++ b/pages/giftopening.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Joyeux Noël !</title>
-    <link rel="stylesheet" href="assets/styles/style_images.css" />
+    <link rel="stylesheet" href="../assets/styles/style_destination.css" />
   </head>
   <body>
     <div class="images_container">
