--- a/pages/giftopening.html
+++ b/pages/giftopening.html
@@ -6,13 +6,23 @@
     <link rel="stylesheet" href="../assets/styles/style_destination.css" />
   </head>
   <body>
-    <div class="images_container">
-      <div class="images_destination-image" id="images_destination-image1"></div>
-      <div class="images_destination-image" id="images_destination-image2"></div>
-      <div class="images_destination-image" id="images_destination-image3"></div>
-      <div class="images_destination-image" id="images_destination-image3"></div>
+    
+    <div id="workspace">
+      <div id="frame">
+        <div id="zoom-container">
+          <div class="col" id="bg-image1"></div>
+          <div class="col" id="bg-image2"></div>
+          <div class="col" id="bg-image3"></div>
+          <div class="col" id="bg-image4"></div>
+          <div class="col" id="bg-image5"></div>
+        </div>
+      </div>
     </div>
-    <h1>Bienvenue sur la page 2</h1>
-    <p>Ceci est le contenu de la page 2.</p>
+
+</body>
+</html>
+
+    <!-- <h1>Bienvenue sur la page 2</h1>
+    <p>Ceci est le contenu de la page 2.</p> -->
   </body>
 </html>
