making some tests about the p2, i think i've got the best style but need to update the picture to show every parts

--- a/pages/giftopening.html
+++ b/pages/giftopening.html
@@ -10,11 +10,26 @@
     <div id="workspace">
       <div id="frame">
         <div id="zoom-container">
-          <div class="col" id="bg-image1"></div>
-          <div class="col" id="bg-image2"></div>
-          <div class="col" id="bg-image3"></div>
-          <div class="col" id="bg-image4"></div>
-          <div class="col" id="bg-image5"></div>
+          <div class="col">
+            <div id="bg-image1">
+            </div>
+          </div>
+          <div class="col">
+            <div id="bg-image2">
+            </div>
+          </div>
+          <div class="col">
+            <div id="bg-image3">
+            </div>
+          </div>
+          <div class="col">
+            <div id="bg-image4">
+            </div>
+          </div>
+          <div class="col">
+            <div id="bg-image5">
+            </div>
+          </div>
         </div>
       </div>
     </div>
