update of the P2 - bg-image and set it up on the right page. clean the previous test. Put it absolute and write on it to test. Next is going to add some content over it

--- a/pages/giftopening.html
+++ b/pages/giftopening.html
@@ -1,43 +1,19 @@
 <html>
   <head>
+    <link rel="icon" href="https://www.puy-de-dome.fr/fileadmin/user_upload/Logo_carre.jpg" type="image/x-icon">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Joyeux Noël !</title>
+    <title> Joyeux Noël ! 🏔️</title>
     <link rel="stylesheet" href="../assets/styles/style_destination.css" />
   </head>
   <body>
-    
-    <div id="workspace">
-      <div id="frame">
-        <div id="zoom-container">
-          <div class="col">
-            <div id="bg-image1">
-            </div>
-          </div>
-          <div class="col">
-            <div id="bg-image2">
-            </div>
-          </div>
-          <div class="col">
-            <div id="bg-image3">
-            </div>
-          </div>
-          <div class="col">
-            <div id="bg-image4">
-            </div>
-          </div>
-          <div class="col">
-            <div id="bg-image5">
-            </div>
-          </div>
-        </div>
-      </div>
+    <!-- Related to the bg image -->
+    <div id="background-image">
+      <div id="frame"></div>
     </div>
 
-</body>
-</html>
+    <h1 id="main-title">Hello</h1>
 
-    <!-- <h1>Bienvenue sur la page 2</h1>
-    <p>Ceci est le contenu de la page 2.</p> -->
-  </body>
+    <!-- Related to the bg image  <div class="top-content">            <h3 id="main-period"></h3>    </div> -->
+</body>
 </html>
