start to add the content for the tile, need to find the good font family and add it to the project

--- a/pages/giftopening.html
+++ b/pages/giftopening.html
@@ -3,6 +3,7 @@
     <link rel="icon" href="https://www.puy-de-dome.fr/fileadmin/user_upload/Logo_carre.jpg" type="image/x-icon">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    
     <title> Joyeux Noël ! 🏔️</title>
     <link rel="stylesheet" href="../assets/styles/style_destination.css" />
   </head>
@@ -12,7 +13,21 @@
       <div id="frame"></div>
     </div>
 
-    <h1 id="main-title">Hello</h1>
+    <div id="content">
+      <div class="title">
+        <h1 id="main-title">Destination</h1>
+        <h2 id="main-destination">Le Puy-de-Dôme</h2>
+        <h2 id="main-subtitle">Du XX/XX/XX au XX/XX/XX</h2>
+      </div>
+      <div id="button_toprogram">
+        <a href="">
+            <button id="next_page">
+              Voir le programme
+            </button>
+        </a>
+      </div>
+
+    </div>
 
     <!-- Related to the bg image  <div class="top-content">            <h3 id="main-period"></h3>    </div> -->
 </body>
