the content start to be stylised, need to finish it tomorrow

--- a/pages/giftopening.html
+++ b/pages/giftopening.html
@@ -3,7 +3,9 @@
     <link rel="icon" href="https://www.puy-de-dome.fr/fileadmin/user_upload/Logo_carre.jpg" type="image/x-icon">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     <title> Joyeux Noël ! 🏔️</title>
     <link rel="stylesheet" href="../assets/styles/style_destination.css" />
   </head>
@@ -14,16 +16,19 @@
     </div>
 
     <div id="content">
-      <div class="title">
-        <h1 id="main-title">Destination</h1>
-        <h2 id="main-destination">Le Puy-de-Dôme</h2>
-        <h2 id="main-subtitle">Du XX/XX/XX au XX/XX/XX</h2>
+
+      <div class="title contenttoread">
+        <h3 id="main-title">DESTINATION</h1>
+        <h2 id="main-destination">Le Puy de Dôme</h2>
       </div>
-      <div id="button_toprogram">
-        <a href="">
-            <button id="next_page">
+
+      <h2 id="main-subtitle" class="contenttoread">23/04/26 </br> au </br> 26/04/26</h2>
+      <div></div>
+      <div id="button_toprogram" class="contenttoread">
+        <a href="#">
+            
               Voir le programme
-            </button>
+ 
         </a>
       </div>
 
