finish the p2 and add some animation to the page

--- a/pages/giftopening.html
+++ b/pages/giftopening.html
@@ -10,22 +10,23 @@
     <link rel="stylesheet" href="../assets/styles/style_destination.css" />
   </head>
   <body>
+    <canvas id="explosionCanvas"></canvas>
     <!-- Related to the bg image -->
     <div id="background-image">
       <div id="frame"></div>
     </div>
-
+    
     <div id="content">
 
-      <div class="title contenttoread">
-        <h3 id="main-title">DESTINATION</h1>
+      <div class="title content-box shadow-box">
+        <h3 id="main-title">DESTINATION : </h1>
         <h2 id="main-destination">Le Puy de Dôme</h2>
       </div>
 
-      <h2 id="main-subtitle" class="contenttoread">23/04/26 </br> au </br> 26/04/26</h2>
+      <h2 id="main-subtitle" class="content-box shadow-box">23/04/26 </br> au </br> 26/04/26</h2>
       <div></div>
-      <div id="button_toprogram" class="contenttoread">
-        <a href="#">
+      <div id="button_toprogram" class="content-box shadow-box_button">
+        <a class="link" href="#">
             
               Voir le programme
  
@@ -34,6 +35,7 @@
 
     </div>
 
-    <!-- Related to the bg image  <div class="top-content">            <h3 id="main-period"></h3>    </div> -->
+    <script src="../assets/scripts/explosion.js"></script>
+   
 </body>
 </html>
