start the new page, i'll need to setup the links to access everypage

--- a/pages/giftopening.html
+++ b/pages/giftopening.html
@@ -26,7 +26,7 @@
       <h2 id="main-subtitle" class="content-box shadow-box">23/04/26 </br> au </br> 26/04/26</h2>
       <div></div>
       <div id="button_toprogram" class="content-box shadow-box_button">
-        <a class="link" href="#">
+        <a class="link" href="program.html">
             
               Voir le programme
  
