--- a/pages/program.html
+++ b/pages/program.html
@@ -1,11 +1,52 @@
-<html>
-    <head>
-        <link rel="icon" href="https://www.puy-de-dome.fr/fileadmin/user_upload/Logo_carre.jpg" type="image/x-icon">
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width" />
-        <title>Programme</title>
-    </head>
-    <body>
-        <h1>Hello World</h1>
-    </body>
+<!doctype html>
+<html lang="fr">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <title>Carnet de Bord</title>
+  </head>
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <a class="navbar-brand" href="#">Carnet de Bord</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav mr-auto fs-3">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">🔰 Accueil</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">🥾 Activités<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">🪹 Notre Logis</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">🍽️ Se Restaurer</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">📜 Un brin d'histoire</a>
+            </li>
+            <div class="d-flex justify-content-end">
+                <div class="blockquote-footer">Laisse toi guider, tout est là 🥰</div>
+            </div>
+            
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  </body>
 </html>
