setup the first carousel slide

--- a/pages/program.html
+++ b/pages/program.html
@@ -45,6 +45,8 @@
       </nav>
     </header>
     <Main>
+
+      <!-- CAROUSEL -->
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -53,12 +55,12 @@
             </ol>
             <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="first-slide imgimg" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
+                <img class="first-slide imgimg" src="../assets/images/destinations/Sommet-du-puy-de-Dome-J.jpg" alt="First slide">
                 <div class="container ">
-                <div class="carousel-caption text-left">
-                    <h1>Example headline.</h1>
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+                <div class="carousel-caption">
+                    <h1>Balades en Auvergne</h1>
+                    <p>De crêtes volcaniques en vallées secrètes, je t’emmène découvrir les merveilles sauvages du Puy-de-Dôme. Entre grottes, sculptures à ciel ouvert et méandres grandioses, voici une parenthèse rien que pour nous. Découvre notre programme</p>
+                    <p><a class="btn btn-lg btn-primary" href="#" role="button">🚶‍♀️‍➡️ Les randonnées </a></p>
                 </div>
                 </div>
             </div>
