finish the carousel, need to add the link to the other pages. But before, I need to setup something behing it because it looks empty

--- a/pages/program.html
+++ b/pages/program.html
@@ -55,32 +55,32 @@
             </ol>
             <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="first-slide imgimg" src="../assets/images/destinations/Sommet-du-puy-de-Dome-J.jpg" alt="First slide">
-                <div class="container ">
+                <img class="first-slide" src="../assets/images/destinations/Sommet-du-puy-de-Dome-J.jpg" alt="First slide">
+                <div class="container">
                 <div class="carousel-caption">
                     <h1>Balades en Auvergne</h1>
-                    <p>De crêtes volcaniques en vallées secrètes, je t’emmène découvrir les merveilles sauvages du Puy-de-Dôme. Entre grottes, sculptures à ciel ouvert et méandres grandioses, voici une parenthèse rien que pour nous. Découvre notre programme</p>
-                    <p><a class="btn btn-lg btn-primary" href="#" role="button">🚶‍♀️‍➡️ Les randonnées </a></p>
+                    <p class="fw-bolder read_easier">De crêtes volcaniques en vallées secrètes, je t’emmène découvrir les merveilles sauvages du Puy-de-Dôme, voici une parenthèse rien que pour nous.</p>
+                    <p><a class="btn btn-lg btn-info" href="#" role="button">🚶‍♀️‍➡️ Notre programme</a></p>
                 </div>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+                <img class="second-slide" src="../assets/images/destinations/gite.jpg" alt="Second slide">
                 <div class="container">
                 <div class="carousel-caption">
-                    <h1>Another example headline.</h1>
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+                    <h1>Cozy Room</h1>
+                    <p class="fw-bolder read_easier">Fatiguée ? Ou juste envie de se mettre au chaud ? Suivez le guide !</p>
+                    <p><a class="btn btn-lg btn-info" href="https://maps.app.goo.gl/PSCAgonA5ZsEGMGy8" role="button">🛣️ Vers Google Map</a></p>
                 </div>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+                <img class="third-slide" src="../assets/images/destinations/meal.JPG" alt="Third slide">
                 <div class="container">
-                <div class="carousel-caption text-right" >
-                    <h1>One more for good measure.</h1>
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+                <div class="carousel-caption" >
+                    <h1>Le gras <br> C'est la vie !</h1>
+                    <p class="fw-bolder read_easier">Il va falloir penser à se restaurer aussi ! Découvre ma sélection de restaurant locaux pour satisfaire ton estomac :</p>
+                    <p><a class="btn btn-lg btn-info" href="#" role="button">🍽️ À table !</a></p>
                 </div>
                 </div>
             </div>
@@ -93,6 +93,14 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
             </a>
+        </div>
+
+        <div class="main_menu container">
+        <!-- Main menu content goes here -->
+          <h1 class="text-center underline">Programme</h1>
+          <hr class="hr hr-blurry" />
+
+        
         </div>
     </Main>
 
