finish the food page, ready to put online

--- a/pages/program.html
+++ b/pages/program.html
@@ -12,7 +12,7 @@
 
     <title>Carnet de Bord</title>
   </head>
-  <body>
+  <body  style="background-color: #ffebcd;">
     <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <a class="navbar-brand" href="program.html">Carnet de Bord</a>
@@ -31,7 +31,7 @@
               <a class="nav-link" href="https://www.booking.com/hotel/fr/la-bulle-du-quinze.fr.html?label=gen173nr-10CAsoTUISbGEtYnVsbGUtZHUtcXVpbnplSDNYBGhNiAEBmAEzuAEXyAEM2AED6AEB-AEBiAIBqAIBuAKqpr3JBsACAdICJDFkOTA5Y2MxLTIwOGYtNGEwOS1hODA2LWI2Njc2ZTVjMmJkNtgCAeACAQ&sid=85e1c33f898cdd0c4db8a6f98a77c198&dist=0&keep_landing=1&sb_price_type=total&type=total&">🪹 Notre Logis</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">🍽️ Se Restaurer</a>
+              <a class="nav-link" href="food.html">🍽️ Se Restaurer </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">📜 Un brin d'histoire</a>
@@ -44,7 +44,7 @@
         </div>
       </nav>
     </header>
-    <Main style="background-color: #ffebcd;">
+    <Main>
 
       <!-- CAROUSEL -->
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -81,7 +81,7 @@
                         <h1>Le gras <br> C'est la vie !</h1>
                         <p class="fw-bolder read_easier">Des plats souvent copieux, faits pour rassasier les marcheurs et les curieux: 
                         C’est une gastronomie qui réchauffe le cœur autant que l’estomac, servie dans une ambiance d’auberge où l’on mange bien, sans chichi, comme à la maison</p>
-                        <p><a class="btn btn-lg btn-dark" href="#" role="button">🍽️ À table !</a></p>
+                        <p><a class="btn btn-lg btn-dark" href="food.html" role="button">🍽️ À table !</a></p>
                     </div>
                   </div>
               </div>
@@ -111,7 +111,7 @@
         <!-- Toggle sur les préparatifs -->
           <p>
             <a class="btn btn-dark btn-lg w-100" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-              Se préparer
+              Se préparer ⏑
             </a>
           </p>
           <div class="collapse" id="collapseExample">
@@ -147,7 +147,7 @@
           <div class="mt-5">
             <p>
               <a class="btn btn-dark btn-lg w-100" data-toggle="collapse" href="#wikifeeder" role="button" aria-expanded="false"  aria-controls="wikifeeder">
-                La région en quelques infos
+                La région en quelques infos ⏑
               </a>
             </p>
             <div class="collapse" id="wikifeeder">
@@ -165,7 +165,7 @@
           <div class="mt-5">
             <p>
               <a class="btn btn-dark btn-lg w-100" data-toggle="collapse" href="#weather" role="button" aria-expanded="false"  aria-controls="weather">
-                Météo des prochains jours
+                Météo des prochains jours ⏑
               </a>
             </p>
             <div class="collapse" id="weather">
