--- a/pages/trackings.html
+++ b/pages/trackings.html
@@ -13,6 +13,9 @@
     <title>Les Randonnées</title>
   </head>
   <body>
+
+
+
     <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <a class="navbar-brand" href="program.html">Carnet de Bord</a>
@@ -22,16 +25,16 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item fs-2">
-              <a class="nav-link active" aria-current="page" href="#">🔰 Accueil</a>
+              <a class="nav-link" aria-current="page" href="program.html">🔰 Accueil</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="trackings.html">🥾 Activités<span class="sr-only">(current)</span></a>
+              <a class="nav-link active" href="trackings.html">🥾 Activités<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://www.booking.com/hotel/fr/la-bulle-du-quinze.fr.html?label=gen173nr-10CAsoTUISbGEtYnVsbGUtZHUtcXVpbnplSDNYBGhNiAEBmAEzuAEXyAEM2AED6AEB-AEBiAIBqAIBuAKqpr3JBsACAdICJDFkOTA5Y2MxLTIwOGYtNGEwOS1hODA2LWI2Njc2ZTVjMmJkNtgCAeACAQ&sid=85e1c33f898cdd0c4db8a6f98a77c198&dist=0&keep_landing=1&sb_price_type=total&type=total&">🪹 Notre Logis</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">🍽️ Se Restaurer</a>
+                <a class="nav-link" href="food.html">🍽️ Se Restaurer </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">📜 Un brin d'histoire</a>
@@ -45,7 +48,10 @@
       </nav>
     </header>
 
-    <div class="container marketing mt-5 pt-5">
+
+    <div class="container marketing mt-5 pt-4">
+    <h3 class="text-center text-uppercase mb-4 text-bold">randonnées</h3>    
+            
         <div class="row">
             <!-- RANDO #1 - JOUR 1 -->
             <div class="col-lg-4" style="margin-bottom: 25px;">
