add the date into the page

--- a/pages/food.html
+++ b/pages/food.html
@@ -16,6 +16,7 @@
     <header class="mb-5" style="margin-bottom: 5rem;">
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <a class="navbar-brand" href="program.html">Carnet de Bord</a>
+        <span class="d-block text-warning"> Du 23/04 au 26/04 </span>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -96,7 +97,7 @@
       </div>
         <img src="../assets/images/karadoc.gif" class="img-fluid mt-5 p-2" alt="Responsive image">
       <div class="d-flex justify-content-end mt-3 mb-5 p-3">
-        <a class="text-muted"href="/programm.html"><h4>Retour à l'Accueil ↺</p></a>
+        <a class="text-muted"href="program.html"><h4>Retour à l'Accueil ↺</p></a>
       </div>
 
   
