--- a/pages/giftopening.html
+++ b/pages/giftopening.html
@@ -2,40 +2,45 @@
   <head>
     <link rel="icon" href="https://www.puy-de-dome.fr/fileadmin/user_upload/Logo_carre.jpg" type="image/x-icon">
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-    <title> Joyeux Noël ! 🏔️</title>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+
+    <title>Joyeux Noël ! 🏔️</title>
+
     <link rel="stylesheet" href="../assets/styles/style_destination.css" />
   </head>
+
   <body>
+
     <canvas id="explosionCanvas"></canvas>
-    <!-- Related to the bg image -->
+
     <div id="background-image">
       <div id="frame"></div>
     </div>
-    
+
     <div id="content">
 
       <div class="title content-box shadow-box">
-        <h3 id="main-title">DESTINATION : </h1>
+        <h3 id="main-title">DESTINATION :</h3>
         <h2 id="main-destination">Le Puy de Dôme</h2>
       </div>
 
-      <h2 id="main-subtitle" class="content-box shadow-box">23/04/26 </br> au </br> 26/04/26</h2>
-      <div></div>
-        <a class="link" href="program.html">
-          <div id="button_toprogram" class="content-box shadow-box_button">
-            
-              Voir le programme
- 
-          </div>
-        </a>
+      <h2 id="main-subtitle" class="content-box shadow-box">
+        23/04/26 <br> au <br> 26/04/26
+      </h2>
+
+      <a class="link" href="program.html">
+        <div id="button_toprogram" class="content-box shadow-box_button">
+          Voir le programme
+        </div>
+      </a>
 
     </div>
 
     <script src="../assets/scripts/explosion.js"></script>
    
-</body>
+  </body>
 </html>
