update time of the countdown

--- a/pages/program.html
+++ b/pages/program.html
@@ -102,7 +102,7 @@
           <div class="intro_container mb-5">
             <div class="introcontent mb-3">
               <h3 class="introtitle text-decoration-underline mb-4"><u> Pourquoi cette destination ?</u></h3>
-              <p class="introparag">Il est toujours difficile de choisir une destination tant la France regorge de belles surprises. Pour notre nouvelle escapade en amoureux, j’ai opté pour le Puy-de-Dôme : l’Auvergne n’est qu’à 3h30 de chez nous, et surtout, l’idée de me promener dans des paysages montagneux, comme lors de notre dernière aventure en Écosse, me remplit de joie.</p>
+              <p class="introparag ltxt">Il est toujours difficile de choisir une destination tant la France regorge de belles surprises. Pour notre nouvelle escapade en amoureux, j’ai opté pour le Puy-de-Dôme : l’Auvergne n’est qu’à 3h30 de chez nous, et surtout, l’idée de me promener dans des paysages montagneux, comme lors de notre dernière aventure en Écosse, me remplit de joie.</p>
             </div>
             
             <div class="introcontent"></div>
@@ -117,25 +117,25 @@
             <div class="card card-body">
               <div class="form-check">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">
+                <label class="form-check-label ltxt" for="flexCheckDefault">
                   De quoi randonner 🏔️
                 </label>
               </div>
               <div class="form-check">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">
+                <label class="form-check-label ltxt" for="flexCheckDefault">
                   De quoi s'habiller 🕶️
                 </label>
               </div>
               <div class="form-check">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">
+                <label class="form-check-label ltxt" for="flexCheckDefault">
                   De quoi grignoter 🍫
                 </label>
               </div>
               <div class="form-check">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">
+                <label class="form-check-label ltxt" for="flexCheckDefault">
                   De quoi prendre des photos 📷
                 </label>
               </div>
@@ -150,7 +150,7 @@
               </a>
             </p>
             <div class="collapse" id="wikifeeder">
-              <div class="card card-body">
+              <div class="card card-body ltxt">
                 La région où se situe Vulcania se trouve au cœur de la Chaîne des Puys, un ensemble volcanique long d’environ 45 km et composé de plus de 80 volcans alignés du nord au sud. Cette chaîne fait partie du Massif central et constitue l’un des ensembles volcaniques les mieux préservés d’Europe. Elle domine le paysage du Puy-de-Dôme, volcan emblématique culminant à 1 465 m d’altitude, offrant une vue spectaculaire sur les plateaux volcaniques environnants. L’ensemble Chaîne des Puys – faille de Limagne est inscrit au patrimoine mondial de l’UNESCO depuis 2018. Pour en savoir plus, tu peux consulter les pages Wikipédia dédiées :
             
               <ul class="list-unstyled">
