--- a/pages/food.html
+++ b/pages/food.html
@@ -45,12 +45,12 @@
       <h2 class="pt-5 text-center text-uppercase mb-5"><u>Les restaurants</u></h2>
       
       <div class="container p-2 my-3 p-3 rounded box-shadow" style="background-color: #d0c0a8;">
-        <h6 class="border-bottom border-dark pb-2 mb-0">Suggestions</h6>
+        <h6 class="border-bottom border-dark pb-2 mb-0 ltxt">Suggestions</h6>
         <a href="https://share.google/crggk6ah34AmpoFvW">
         <div class="media text-muted pt-3">
           <img data-src="holder.js/32x32?theme=thumb&amp;bg=007bff&amp;fg=007bff&amp;size=1" alt="32x32" class="mr-2 rounded" style="width: 45px; height: 45px;" src="https://lh3.googleusercontent.com/gps-cs-s/AG0ilSyKacijzRXVjFO3gKwFAbGPU16TdZQ5HdblSQTGBqYWjPPKSLild1pSc57kYhUc0xlUwc-oQPRzyUL4eJTw2LIKe-oB1n5BA9oB8MRzzvrHCrGtghapvHuT7z1I8wKU7CbMMktq=s1360-w1360-h1020-rw" data-holder-rendered="true">
           <div class="media-body pb-3 mb-0 small lh-125 border-bottom border-dark">
-            <div class="d-flex justify-content-between align-items-left w-100">
+            <div class="d-flex justify-content-between align-items-left w-100 ltxt">
               <strong class="text-dark text">Auberge des Gros Manaux</strong>
               <div class="d-flex flex-row">
                 <p class="text-sm-right text-dark mr-2 mb-0">4.5</p>
@@ -66,7 +66,7 @@
         <div class="media text-muted pt-3">
           <img data-src="holder.js/32x32?theme=thumb&amp;bg=007bff&amp;fg=007bff&amp;size=1" alt="32x32" class="mr-2 rounded" style="width: 45px; height: 45px;" src="https://lh3.googleusercontent.com/gps-cs-s/AG0ilSyZ76SZ1_p3Vzjdwt9vAEeSAOoUrm9LNSNb0aLSIegO-KFi_HRW3Rw9vbcl-f21dYQR-aelEJHbavtCfjyWWBDO2Ba8HJBW7xWD5NDFDIb77XU2uaqcT12fcwfYUxTjLWKh3U7T=s1360-w1360-h1020-rw" data-holder-rendered="true">
           <div class="media-body pb-3 mb-0 small lh-125 border-bottom border-dark">
-            <div class="d-flex justify-content-between align-items-left w-100">
+            <div class="d-flex justify-content-between align-items-left w-100 ltxt">
               <strong class="text-dark text">Restaurant des Amis</strong>
               <div class="d-flex flex-row">
                 <p class="text-sm-right text-dark mr-2 mb-0">4.7</p>
@@ -83,7 +83,7 @@
         <div class="media text-muted pt-3">
           <img data-src="holder.js/32x32?theme=thumb&amp;bg=007bff&amp;fg=007bff&amp;size=1" alt="32x32" class="mr-2 rounded" style="width: 45px; height: 45px;" src="https://lh3.googleusercontent.com/p/AF1QipPQ5HJayNXmsYrMJJtBZvgl9q0YTkpi-MLycC2Z=w533-h240-k-no" data-holder-rendered="true">
           <div class="media-body pb-3 mb-0 small lh-125 border-bottom border-dark">
-            <div class="d-flex justify-content-between align-items-left w-100">
+            <div class="d-flex justify-content-between align-items-left w-100 ltxt">
               <strong class="text-dark text">Chez Agathe Auberge de St Pierre</strong>
               <div class="d-flex flex-row">
                 <p class="text-sm-right text-dark mr-2 mb-0">4.2</p>
